# EmbeddedCMake

./: .gitignore  .gitmodules  CMakeLists.txt  EmbeddedCMakeConfig.cmake  EmbeddedCMakeConfig.cmake.in  EmbeddedCMakeConfigVersion.cmake  EmbeddedCMakeConfigVersion.cmake.in  README.md
devices/lpc804/: LPC804_flash.ld
devices/lpc845/: LPC845.cmake  LPC845_ram.ld
examples/: CMakeLists.txt
source/: BinaryGenerator.cmake  CMakeListsShared.cmake  Defaults.cmake  GetDeviceDirectories.cmake  LPC804.cmake  ProjectBase.cmake  StaticAnalysis.cmake  TestTarget.cmake  arm-none-eabi_Toolchain.cmake  arm-none-eabi_Toolchain_armgcc.cmake  arm-none-eabi_Toolchain_clang.cmake  arm-none-eabi_Toolchain_mcuxpresso.cmake  cccc.cmake  clangcheck.cmake  clangtidy.cmake  cppcheck.cmake  cppclean.cmake  cpplint.cmake  flawfinder.cmake  flint++.cmake  git_commit.cmake  oclint.cmake  pmd.cmake
tests/: .gitignore  CMakeLists.txt  main.cpp
